--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>TpFinal-tallerweb1</groupId>
-	<artifactId>TpFinal-tallerweb1</artifactId>
+	<groupId>TpFinal-Java</groupId>
+	<artifactId>TpFinal-Java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<build>
 		<resources>
